--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -12,3 +12,7 @@ body > section {
   grid-template-columns: minmax(220px, 1fr) 6fr;
   grid-template-rows: 1fr;
 }
+
+.container-with-sidebar > section {
+  padding: 1rem;
+}
