--- a/src/assets/styles/sidebar.css
+++ b/src/assets/styles/sidebar.css
@@ -1,5 +1,7 @@
 .menu {
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .menu-list > li {
@@ -19,15 +21,16 @@
   transform: rotate(90deg);
 }
 
-.menu-list > li ul {
+.menu-list > li > ul {
   transition: 0.2s ease-in-out;
+  transition-property: max-height, opacity, margin;
   max-height: 100vh;
   overflow: hidden;
   margin: 12px;
   opacity: 1;
 }
 
-.menu-list > li.menu-close ul {
+.menu-list > li.menu-close > ul {
   max-height: 0;
   opacity: 0;
   margin: 0;
@@ -51,4 +54,43 @@
 .menu-list a > i:nth-child(3) {
   position: absolute;
   right: 0;
+}
+
+.container-with-sidebar.hide-sidebar {
+  grid-template-columns: 80px 6fr;
+}
+
+.container-with-sidebar.hide-sidebar > .menu > p,
+.container-with-sidebar.hide-sidebar > .menu > ul span,
+.container-with-sidebar.hide-sidebar > .menu > ul > li > a > i:nth-child(3),
+.container-with-sidebar.hide-sidebar > .menu > .sidebar-burger > span {
+  display: none;
+}
+
+.container-with-sidebar.hide-sidebar > .menu > .sidebar-burger {
+  justify-content: center;
+}
+
+.container-with-sidebar.hide-sidebar .menu-list > li {
+  position: relative;
+}
+
+.container-with-sidebar.hide-sidebar .menu-list > li > ul {
+  position: absolute;
+  top: -12px;
+  left: 52px;
+  background-color: #343434;
+  border-left: 0;
+  padding: 0;
+  width: 150px;
+}
+
+.sidebar-burger {
+  margin-top: auto;
+  display: flex;
+  cursor: pointer;
+}
+
+.sidebar-burger > span {
+  margin-left: 0.5rem;
 }
